--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -28,7 +28,7 @@
          <nav id="sidebar" class="sidebar-wrapper">
             <div class="sidebar-content">
                <div class="sidebar-brand">
-                  <a href="#"><img src="images/svgs/summit.svg" style="width: 50px;"> Bunker Hill</a>
+                  <a href="#"><img src="images/logo.jpg" style="width: 50px;"> Bunker Hill Village</a>
                   <div id="close-sidebar">
                      <i class="fas fa-times"></i>
                   </div>
@@ -42,8 +42,8 @@
                <!-- sidebar-header  -->
                <div class="sidebar-menu">
                   <ul>
-                     <li class="header-menu" style="display: none;">
-                        <span id="Location">Location</span>
+                     <li class="header-menu">
+                        <span id="Location"></span>
                      </li>
                      <li class="" style="display: none;">
                         <a href="#">
@@ -75,7 +75,7 @@
                      </li>
                     <li class="">
                         <a href="#">
-                        <i class="fas fa-clipboard"></i>
+                        <img src= "images/trail_white.png" ></i>
                         <span>Trail Location</span>
                         </a>
                         <p id="info"></p>
