Changed color on hover, popups now appear by marker

--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -25,7 +25,7 @@
          <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
          <i class="fas fa-chevron-left"></i>
          </a>
-         <nav id="sidebar" class="sidebar-wrapper">
+         <nav id="sidebar" class="sidebar-wrapper" style="display:none;">
             <div class="sidebar-content">
                <div class="sidebar-brand">
                   <a href="#"><img src="images/logo.jpg" style="width: 50px;"> Bunker Hill Village</a>
