landing page style update

--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -8,7 +8,6 @@
     </style>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1"/>
-    <meta name="keywords" content="maps, cartography"/>
     <title>Home</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -19,8 +18,12 @@
     <script type="text/javascript" src="lib/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
 
+    <h1 id="logo">
+        <img src="images/logo.jpg" width="100px" height="100px">
+    </h1>
+
     <div class = "jumbotron">
-        <h2>Houston Neighborhood Maps</h2>
+        <h2>Memorial Village: Hidden Paths</h2>
         <p>
             <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Bunker_Hill/index.html">Bunker Hill</a>
         </p>
