--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -26,6 +26,12 @@
         <h2>Memorial Village: Hidden Paths</h2>
         <p>
             <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Bunker_Hill/index.html">Bunker Hill</a>
+            <br>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hedwig_Village/index.html">Hedwig Village</a>
+            <br>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hunters_Creek/index.html">Hunter's Creek Village (map in progress)</a>
+            <br>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hunters_Creek/index.html">Piney Point (map in progress)</a>
         </p>
     </div>
     
