updated landing page

--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -27,11 +27,11 @@
         <p>
             <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Bunker_Hill/index.html">Bunker Hill</a>
             <br>
-            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hedwig_Village/index.html">Hedwig Village</a>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hedwig_Village/index.html">Hedwig Village (map in progress)</a>
             <br>
-            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hunters_Creek/index.html">Hunter's Creek Village (map in progress)</a>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hunters_Creek/index.html">Hunter's Creek Village</a>
             <br>
-            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Hunters_Creek/index.html">Piney Point (map in progress)</a>
+            <a href="https://crobertsonrealtor.github.io/3121ae460f9312d03ade91f19604cc5096fae6d7/Piney_Point/index.html">Piney Point (map in progress)</a>
         </p>
     </div>
     
