--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/Hedwig_Village/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/Hedwig_Village/index.html
@@ -28,7 +28,7 @@
          <nav id="sidebar" class="sidebar-wrapper" style="display:none;">
             <div class="sidebar-content">
                <div class="sidebar-brand">
-                  <a href="#"><img src="images/logo.jpg" style="width: 50px;"> Bunker Hill Village</a>
+                  <a href="#"><img src="images/logo.jpg" style="width: 50px;"> Hedwig Village</a>
                   <div id="close-sidebar">
                      <i class="fas fa-times"></i>
                   </div>
