Updated contact info

--- a/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
+++ b/3121ae460f9312d03ade91f19604cc5096fae6d7/index.html
@@ -42,9 +42,9 @@
             <br>
             Compass Realtor
             <br>
-            HBJ - Top 25
+            Work: 713-417-2369
             <br>
-            Consistent Top Producer
+            courtney.robertson@compass.com
             <br>
             <br>
 
