Changed phone number on home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br>
             Compass Realtor
             <br>
-            Work: 713-417-2369
+            Cell: 713.557.5943
             <br>
             courtney.robertson@compass.com
             <br>
